# IDS-LAB

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: run_test.yaml
notebooks/: .gitignore  analyze_dataset.ipynb  analyze_results.ipynb  binary_classification_results (no undersampling & oversampling).ipynb  binary_classification_results (undersampling & oversampling).ipynb  binary_classification_results.ipynb  centralized_client_1_results.ipynb  centralized_client_2_results.ipynb  quantile_regression.ipynb
notebooks.old/: analyze_dataset.ipynb  centralized_client_0_results.ipynb  centralized_results.ipynb
notebooks.old/templates/: analyze_results.ipynb
notebooks/templates/: binary_classification_template.ipynb
src/: config.py  main.py  preprocess.py  process.py  run_notebook.py  train_model.py  utils.py
src.old/: config.py  evaluation.py  preprocess.py  process.py  train_model.py
src.old/architectures/federated/: model.py
src.old/experiements/: centralized_clients.py  experiement.ipynb
src.old/experiements/Binary Classification Experiment/: binary_classification.py
src.old/models/: Classifier.py  NN.py
src/1-setup/: main.ipynb  utils.py
src/2-centrilized/: main.ipynb
src/architectures/: __init__.py
src/architectures/centralized/: model.py
src/architectures/federated/: clients_preparation.py  model.py
src/architectures/fedrated/: clients_preparation.py  model.py
src/architectures/split/: model.py
src/experiements/Binary Classification Experiment/: model.py  (+1 more)
tests/: test_process.py
(+5 files in other folders)
