[tool.poetry]
name = "fids"
version = "0.1.0"
description = ""
authors = ["Hadi Houssainy"]

[tool.poetry.dependencies]
python = "^3.8"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
prefect = "^2.11.3"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
prefect-jupyter = "^0.2.0"
interrogate = "^1.5.0"
joblib = "^1.2.0"
xgboost = "^1.7.6"
matplotlib = "^3.7.2"
flwr = {extras = ["simulation"], version = "^1.4.0"}
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl" }
imbalanced-learn = "^0.11.0"
seaborn = "^0.12.2"
ray = "^2.6.3"
tensorboard = "^2.14.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
